--- a/tuberculosis_classifier.ipynb
+++ b/tuberculosis_classifier.ipynb
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,12 +153,11 @@
     "mont_set = mont_tb_neg + mont_tb_pos\n",
     "shen_set = shen_tb_neg + shen_tb_pos\n",
     "\n",
-    "for index, img in enumerate(mont_set):\n",
-    "    filename = img\n",
+    "for index, filename in enumerate(mont_set):\n",
     "    img = Image.open(filename)\n",
     "    img.filename = filename\n",
     "    img = img.resize((1024,1024),Image.ANTIALIAS)\n",
-    "    mont_set[index] = img\n"
+    "    mont_set[index] = img"
    ]
   },
   {
@@ -185,18 +184,128 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "'int' object is not subscriptable",
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train on 110 samples, validate on 14 samples\n",
+      "Epoch 1/50\n",
+      "110/110 [==============================] - 11s 101ms/step - loss: -76.1687 - val_loss: -319.2893\n",
+      "Epoch 2/50\n",
+      "110/110 [==============================] - 8s 73ms/step - loss: -333.4011 - val_loss: -518.3201\n",
+      "Epoch 3/50\n",
+      "110/110 [==============================] - 8s 73ms/step - loss: -542.0560 - val_loss: -759.5527\n",
+      "Epoch 4/50\n",
+      "110/110 [==============================] - 8s 75ms/step - loss: -793.4955 - val_loss: -956.1879\n",
+      "Epoch 5/50\n",
+      "110/110 [==============================] - 8s 73ms/step - loss: -1001.0403 - val_loss: -1157.5178\n",
+      "Epoch 6/50\n",
+      "110/110 [==============================] - 8s 73ms/step - loss: -1208.1604 - val_loss: -1271.1859\n",
+      "Epoch 7/50\n",
+      "110/110 [==============================] - 8s 74ms/step - loss: -1330.3577 - val_loss: -1447.4783\n",
+      "Epoch 8/50\n",
+      "110/110 [==============================] - 9s 78ms/step - loss: -1511.8055 - val_loss: -1513.2444\n",
+      "Epoch 9/50\n",
+      "110/110 [==============================] - 8s 75ms/step - loss: -1580.4047 - val_loss: -1557.3861\n",
+      "Epoch 10/50\n",
+      "110/110 [==============================] - 8s 73ms/step - loss: -1625.3436 - val_loss: -1587.9318\n",
+      "Epoch 11/50\n",
+      "110/110 [==============================] - 8s 72ms/step - loss: -1656.9572 - val_loss: -1614.8060\n",
+      "Epoch 12/50\n",
+      "110/110 [==============================] - 8s 74ms/step - loss: -1686.3014 - val_loss: -1625.9794\n",
+      "Epoch 13/50\n",
+      "110/110 [==============================] - 8s 73ms/step - loss: -1697.9731 - val_loss: -1633.5173\n",
+      "Epoch 14/50\n",
+      "110/110 [==============================] - 8s 73ms/step - loss: -1706.4479 - val_loss: -1639.4659\n",
+      "Epoch 15/50\n",
+      "110/110 [==============================] - 8s 74ms/step - loss: -1712.4806 - val_loss: -1641.6100\n",
+      "Epoch 16/50\n",
+      "110/110 [==============================] - 8s 73ms/step - loss: -1714.6605 - val_loss: -1644.1270\n",
+      "Epoch 17/50\n",
+      "110/110 [==============================] - 8s 72ms/step - loss: -1717.2701 - val_loss: -1644.8480\n",
+      "Epoch 18/50\n",
+      "110/110 [==============================] - 8s 73ms/step - loss: -1717.9854 - val_loss: -1648.0751\n",
+      "Epoch 19/50\n",
+      "110/110 [==============================] - 8s 72ms/step - loss: -1721.2489 - val_loss: -1651.8864\n",
+      "Epoch 20/50\n",
+      "110/110 [==============================] - 8s 72ms/step - loss: -1725.1719 - val_loss: -1654.3059\n",
+      "Epoch 21/50\n",
+      "110/110 [==============================] - 8s 73ms/step - loss: -1727.4089 - val_loss: -1659.5872\n",
+      "Epoch 22/50\n",
+      "110/110 [==============================] - 8s 73ms/step - loss: -1733.1346 - val_loss: -1661.7981\n",
+      "Epoch 23/50\n",
+      "110/110 [==============================] - 8s 72ms/step - loss: -1735.5171 - val_loss: -1664.4967\n",
+      "Epoch 24/50\n",
+      "110/110 [==============================] - 8s 72ms/step - loss: -1738.3732 - val_loss: -1669.1620\n",
+      "Epoch 25/50\n",
+      "110/110 [==============================] - 8s 73ms/step - loss: -1743.6500 - val_loss: -1675.8153\n",
+      "Epoch 26/50\n",
+      "110/110 [==============================] - 8s 73ms/step - loss: -1750.5269 - val_loss: -1682.3529\n",
+      "Epoch 27/50\n",
+      "110/110 [==============================] - 8s 73ms/step - loss: -1757.4342 - val_loss: -1685.8405\n",
+      "Epoch 28/50\n",
+      "110/110 [==============================] - 8s 75ms/step - loss: -1761.0598 - val_loss: -1686.9581\n",
+      "Epoch 29/50\n",
+      "110/110 [==============================] - 8s 73ms/step - loss: -1761.9918 - val_loss: -1690.2000\n",
+      "Epoch 30/50\n",
+      "110/110 [==============================] - 8s 72ms/step - loss: -1765.4147 - val_loss: -1690.3685\n",
+      "Epoch 31/50\n",
+      "110/110 [==============================] - 8s 72ms/step - loss: -1765.5715 - val_loss: -1694.4534\n",
+      "Epoch 32/50\n",
+      "110/110 [==============================] - 8s 71ms/step - loss: -1769.5052 - val_loss: -1698.3190\n",
+      "Epoch 33/50\n",
+      "110/110 [==============================] - 8s 74ms/step - loss: -1773.5627 - val_loss: -1698.4166\n",
+      "Epoch 34/50\n",
+      "110/110 [==============================] - 8s 74ms/step - loss: -1773.6460 - val_loss: -1698.6514\n",
+      "Epoch 35/50\n",
+      "110/110 [==============================] - 8s 74ms/step - loss: -1773.9564 - val_loss: -1701.3485\n",
+      "Epoch 36/50\n",
+      "110/110 [==============================] - 9s 79ms/step - loss: -1776.8315 - val_loss: -1701.3992\n",
+      "Epoch 37/50\n",
+      "110/110 [==============================] - 8s 73ms/step - loss: -1776.8730 - val_loss: -1701.4443\n",
+      "Epoch 38/50\n",
+      "110/110 [==============================] - 8s 73ms/step - loss: -1776.9120 - val_loss: -1701.5089\n",
+      "Epoch 39/50\n",
+      "110/110 [==============================] - 8s 73ms/step - loss: -1776.9762 - val_loss: -1704.1396\n",
+      "Epoch 40/50\n",
+      "110/110 [==============================] - 8s 73ms/step - loss: -1779.9369 - val_loss: -1710.4463\n",
+      "Epoch 41/50\n",
+      "110/110 [==============================] - 8s 74ms/step - loss: -1786.2191 - val_loss: -1714.9308\n",
+      "Epoch 42/50\n",
+      "110/110 [==============================] - 8s 73ms/step - loss: -1791.2694 - val_loss: -1715.0380\n",
+      "Epoch 43/50\n",
+      "110/110 [==============================] - 8s 73ms/step - loss: -1791.3788 - val_loss: -1715.0901\n",
+      "Epoch 44/50\n",
+      "110/110 [==============================] - 8s 71ms/step - loss: -1791.4210 - val_loss: -1715.1309\n",
+      "Epoch 45/50\n",
+      "110/110 [==============================] - 8s 71ms/step - loss: -1791.4550 - val_loss: -1715.1682\n",
+      "Epoch 46/50\n",
+      "110/110 [==============================] - 8s 74ms/step - loss: -1791.4844 - val_loss: -1715.2352\n",
+      "Epoch 47/50\n",
+      "110/110 [==============================] - 8s 72ms/step - loss: -1791.5355 - val_loss: -1720.8422\n",
+      "Epoch 48/50\n",
+      "110/110 [==============================] - 8s 72ms/step - loss: -1796.9828 - val_loss: -1712.5143\n",
+      "Epoch 49/50\n",
+      "110/110 [==============================] - 8s 75ms/step - loss: -1789.8400 - val_loss: -1722.2870\n",
+      "Epoch 50/50\n",
+      "110/110 [==============================] - 8s 73ms/step - loss: -1798.4573 - val_loss: -1734.6895\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "Error when checking input: expected input_38 to have 2 dimensions, but got array with shape (14, 1024, 32)",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-20-05d102278e36>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     43\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mindex\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mimg\u001b[0m \u001b[1;32min\u001b[0m \u001b[0menumerate\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmont_set\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     44\u001b[0m     \u001b[0mimg\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfrombuffer\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mimg\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtobytes\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0muint8\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 45\u001b[1;33m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mimg\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msize\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     46\u001b[0m     \u001b[0mimg\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mimg\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mreshape\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mimg\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msize\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mimg\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msize\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m3\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     47\u001b[0m     \u001b[0mmont_set\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mindex\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mimg\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mTypeError\u001b[0m: 'int' object is not subscriptable"
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-28-52cee95f8df6>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     63\u001b[0m \u001b[1;31m# note that we take them from the *test* set\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     64\u001b[0m \u001b[0mencoded_imgs\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mencoder\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx_test\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 65\u001b[1;33m \u001b[0mdecoded_imgs\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdecoder\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mencoded_imgs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     66\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     67\u001b[0m \u001b[1;31m# use Matplotlib\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mD:\\Users\\Emperor Justinian\\Anaconda\\lib\\site-packages\\keras\\engine\\training.py\u001b[0m in \u001b[0;36mpredict\u001b[1;34m(self, x, batch_size, verbose, steps)\u001b[0m\n\u001b[0;32m   1147\u001b[0m                              'argument.')\n\u001b[0;32m   1148\u001b[0m         \u001b[1;31m# Validate user data.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 1149\u001b[1;33m         \u001b[0mx\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0m_\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0m_\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_standardize_user_data\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   1150\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mstateful\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1151\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[0mx\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m>\u001b[0m \u001b[0mbatch_size\u001b[0m \u001b[1;32mand\u001b[0m \u001b[0mx\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m%\u001b[0m \u001b[0mbatch_size\u001b[0m \u001b[1;33m!=\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mD:\\Users\\Emperor Justinian\\Anaconda\\lib\\site-packages\\keras\\engine\\training.py\u001b[0m in \u001b[0;36m_standardize_user_data\u001b[1;34m(self, x, y, sample_weight, class_weight, check_array_lengths, batch_size)\u001b[0m\n\u001b[0;32m    749\u001b[0m             \u001b[0mfeed_input_shapes\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    750\u001b[0m             \u001b[0mcheck_batch_axis\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mFalse\u001b[0m\u001b[1;33m,\u001b[0m  \u001b[1;31m# Don't enforce the batch size.\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 751\u001b[1;33m             exception_prefix='input')\n\u001b[0m\u001b[0;32m    752\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    753\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0my\u001b[0m \u001b[1;32mis\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mD:\\Users\\Emperor Justinian\\Anaconda\\lib\\site-packages\\keras\\engine\\training_utils.py\u001b[0m in \u001b[0;36mstandardize_input_data\u001b[1;34m(data, names, shapes, check_batch_axis, exception_prefix)\u001b[0m\n\u001b[0;32m    126\u001b[0m                         \u001b[1;34m': expected '\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mnames\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;34m' to have '\u001b[0m \u001b[1;33m+\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    127\u001b[0m                         \u001b[0mstr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mshape\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;34m' dimensions, but got array '\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 128\u001b[1;33m                         'with shape ' + str(data_shape))\n\u001b[0m\u001b[0;32m    129\u001b[0m                 \u001b[1;32mif\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[0mcheck_batch_axis\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    130\u001b[0m                     \u001b[0mdata_shape\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdata_shape\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mValueError\u001b[0m: Error when checking input: expected input_38 to have 2 dimensions, but got array with shape (14, 1024, 32)"
      ]
     }
    ],
@@ -242,11 +351,9 @@
     "random.seed(42)\n",
     "random.shuffle(mont_set) # shuffles the ordering of the data\n",
     "\n",
-    "\n",
     "for index, img in enumerate(mont_set):\n",
     "    img = np.frombuffer(img.tobytes(), dtype=np.uint8)\n",
-    "    print(img.size[0])\n",
-    "    img = img.reshape((img.size[1], img.size[0], 3))  \n",
+    "    img = img.reshape((1024, 1024))  \n",
     "    mont_set[index] = img\n",
     "\n",
     "split_1 = int(0.8 * len(mont_set))\n",
@@ -267,8 +374,15 @@
     "# encode and decode some digits\n",
     "# note that we take them from the *test* set\n",
     "encoded_imgs = encoder.predict(x_test)\n",
-    "decoded_imgs = decoder.predict(encoded_imgs)\n",
-    "\n",
+    "decoded_imgs = decoder.predict(encoded_imgs)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# use Matplotlib \n",
     "import matplotlib.pyplot as plt\n",
     "\n",
