--- a/tuberculosis_classifier.ipynb
+++ b/tuberculosis_classifier.ipynb
@@ -395,7 +395,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from keras.layers import Input, Dense\n",
@@ -468,7 +470,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# use Matplotlib \n",
@@ -497,7 +501,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from keras.layers import Conv2D, Dense, Activation, Flatten\n",
@@ -555,25 +561,121 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(110, 1048576)\n",
+      "(14, 1048576)\n"
+     ]
+    },
+    {
+     "ename": "AssertionError",
+     "evalue": "X and T cannot have different number of samples",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-41-c4e79592d68f>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     38\u001b[0m \u001b[0melm\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0madd_neurons\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m20\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'sigm'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     39\u001b[0m \u001b[0melm\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0madd_neurons\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'sigm'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 40\u001b[1;33m \u001b[0melm\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtrain\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx_train\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mx_test\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     41\u001b[0m \u001b[0mY\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0melm\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx_test\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     42\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mD:\\Users\\Emperor Justinian\\Anaconda\\lib\\site-packages\\hpelm\\elm.py\u001b[0m in \u001b[0;36mtrain\u001b[1;34m(self, X, T, *args, **kwargs)\u001b[0m\n\u001b[0;32m    180\u001b[0m                 \u001b[0msplit\u001b[0m \u001b[0mof\u001b[0m \u001b[0mdata\u001b[0m \u001b[0mduring\u001b[0m \u001b[0mthe\u001b[0m \u001b[0mcross\u001b[0m\u001b[1;33m-\u001b[0m\u001b[0mvalidation\u001b[0m \u001b[0mprocedure\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    181\u001b[0m         \"\"\"\n\u001b[1;32m--> 182\u001b[1;33m         \u001b[0mX\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mT\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_checkdata\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mT\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    183\u001b[0m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_train_parse_args\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0margs\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mkwargs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    184\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mD:\\Users\\Emperor Justinian\\Anaconda\\lib\\site-packages\\hpelm\\elm.py\u001b[0m in \u001b[0;36m_checkdata\u001b[1;34m(self, X, T)\u001b[0m\n\u001b[0;32m    558\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    559\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mX\u001b[0m \u001b[1;32mis\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mand\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mT\u001b[0m \u001b[1;32mis\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 560\u001b[1;33m             \u001b[1;32massert\u001b[0m \u001b[0mX\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m==\u001b[0m \u001b[0mT\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"X and T cannot have different number of samples\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    561\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    562\u001b[0m         \u001b[1;32mreturn\u001b[0m \u001b[0mX\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mT\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mAssertionError\u001b[0m: X and T cannot have different number of samples"
+     ]
+    }
+   ],
    "source": [
+    "import glob\n",
+    "import numpy as np\n",
+    "import random\n",
+    "import PIL\n",
+    "from PIL import Image\n",
+    "\n",
+    "\n",
+    "mont_set = glob.glob('Data/Suppressed/MCUCXR*.png')\n",
+    "shen_set = glob.glob('Data/Suppressed/CHNCXR*.png')\n",
+    "\n",
+    "random.seed(42)\n",
+    "random.shuffle(mont_set) # shuffles the ordering of the data\n",
+    "\n",
+    "for index, img in enumerate(mont_set):\n",
+    "    img = Image.open(img)\n",
+    "    img = np.frombuffer(img.tobytes(), dtype=np.uint8)\n",
+    "    #img = img.reshape((1024, 1024))  \n",
+    "    mont_set[index] = img\n",
+    "\n",
+    "split_1 = int(0.8 * len(mont_set))\n",
+    "split_2 = int(0.9 * len(mont_set))\n",
+    "x_train = np.array(mont_set[:split_1])\n",
+    "x_test = np.array(mont_set[split_2:])\n",
+    "\n",
+    "\n",
     "from hpelm import ELM\n",
     "from sklearn.metrics import roc_curve\n",
     "from mlxtend.plotting import plot_confusion_matrix\n",
+    "import matplotlib.pyplot as plt\n",
     "\n",
     "# Pseudocode until pre-processing is done\n",
     "\n",
-    "# elm = ELM(input_dims, output_dims)\n",
-    "# elm.add_neurons()\n",
+    "print(x_train.shape)\n",
+    "print(x_test.shape)\n",
+    "\n",
+    "elm = ELM(x_train.shape[1], x_test.shape[1])\n",
+    "elm.add_neurons(20, 'sigm')\n",
+    "elm.add_neurons(20, 'sigm')\n",
+    "elm.add_neurons(2, 'sigm')\n",
+    "elm.train(x_train, x_test)\n",
+    "Y = elm.predict(x_test)\n",
+    "\n",
     "\n",
     "# train & test ELM (cross-validation)\n",
     "\n",
     "# plot ROC-curve\n",
     "\n",
-    "# plot_confusion_matrix(elm.confusion(T, Y), colorbar=True)\n",
-    "# plt.show()"
+    "plot_confusion_matrix(elm.confusion(x_test, Y), colorbar=True)\n",
+    "plt.show()\n",
+    "\n",
+    "\n",
+    "# from hpelm import ELM\n",
+    "# >>> elm = ELM(X.shape[1], T.shape[1])\n",
+    "# >>> elm.add_neurons(20, \"sigm\")\n",
+    "# >>> elm.add_neurons(10, \"rbf_l2\")\n",
+    "# >>> elm.train(X, T, \"LOO\")\n",
+    "# >>> Y = elm.predict(X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting mlxtend\n",
+      "  Downloading https://files.pythonhosted.org/packages/44/d1/1b9e85e991f836e9aaea18367ff628a6324af1005971dc9f57e51a2ab5a4/mlxtend-0.14.0-py2.py3-none-any.whl (1.3MB)\n",
+      "Requirement already satisfied: numpy>=1.10.4 in d:\\users\\emperor justinian\\anaconda\\lib\\site-packages (from mlxtend) (1.14.0)\n",
+      "Requirement already satisfied: matplotlib>=1.5.1 in d:\\users\\emperor justinian\\anaconda\\lib\\site-packages (from mlxtend) (3.0.2)\n",
+      "Requirement already satisfied: scipy>=0.17 in d:\\users\\emperor justinian\\anaconda\\lib\\site-packages (from mlxtend) (0.19.0)\n",
+      "Requirement already satisfied: scikit-learn>=0.18 in d:\\users\\emperor justinian\\anaconda\\lib\\site-packages (from mlxtend) (0.18.1)\n",
+      "Requirement already satisfied: setuptools in d:\\users\\emperor justinian\\anaconda\\lib\\site-packages (from mlxtend) (38.5.1)\n",
+      "Requirement already satisfied: pandas>=0.17.1 in d:\\users\\emperor justinian\\anaconda\\lib\\site-packages (from mlxtend) (0.20.1)\n",
+      "Requirement already satisfied: python-dateutil>=2.1 in d:\\users\\emperor justinian\\anaconda\\lib\\site-packages (from matplotlib>=1.5.1->mlxtend) (2.6.0)\n",
+      "Requirement already satisfied: pyparsing!=2.0.4,!=2.1.2,!=2.1.6,>=2.0.1 in d:\\users\\emperor justinian\\anaconda\\lib\\site-packages (from matplotlib>=1.5.1->mlxtend) (2.1.4)\n",
+      "Requirement already satisfied: kiwisolver>=1.0.1 in d:\\users\\emperor justinian\\anaconda\\lib\\site-packages (from matplotlib>=1.5.1->mlxtend) (1.0.1)\n",
+      "Requirement already satisfied: cycler>=0.10 in d:\\users\\emperor justinian\\anaconda\\lib\\site-packages (from matplotlib>=1.5.1->mlxtend) (0.10.0)\n",
+      "Requirement already satisfied: pytz>=2011k in d:\\users\\emperor justinian\\anaconda\\lib\\site-packages (from pandas>=0.17.1->mlxtend) (2017.2)\n",
+      "Requirement already satisfied: six>=1.5 in d:\\users\\emperor justinian\\anaconda\\lib\\site-packages (from python-dateutil>=2.1->matplotlib>=1.5.1->mlxtend) (1.11.0)\n",
+      "Installing collected packages: mlxtend\n",
+      "Successfully installed mlxtend-0.14.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "!py -m pip install mlxtend"
    ]
   },
   {
@@ -607,7 +709,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
